force-app/main/default/objects/Visits__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_End__c</fullName>
        <label>Actual End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Actual_Start__c</fullName>
        <label>Actual Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Checked_In_Location__c</fullName>
        <label>Checked In Location</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Checked_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checked In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checked_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checked Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_End__c</fullName>
        <label>Planned End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Planned_Start__c</fullName>
        <label>Planned Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(AND(Checked_In__c == false, Checked_Out__c == false),&apos;Not Started&apos;, IF(AND(Checked_In__c == true, Checked_Out__c == false),&apos;In-Progress&apos;,IF(AND(Checked_In__c == true, Checked_Out__c == true),&apos;Completed&apos;,&apos;&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Visit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Planned_Start__c</columns>
        <columns>Checked_In__c</columns>
        <columns>Planned_End__c</columns>
        <columns>Actual_Start__c</columns>
        <columns>Actual_End__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_All_Visits</fullName>
        <columns>NAME</columns>
        <columns>Planned_Start__c</columns>
        <columns>Planned_End__c</columns>
        <columns>Actual_Start__c</columns>
        <columns>Actual_End__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>My All Visits</label>
    </listViews>
    <listViews>
        <fullName>Visits_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Planned_Start__c</columns>
        <columns>Status__c</columns>
        <columns>Lead__c</columns>
        <columns>Account__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Planned_Start__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Visits This Week</label>
    </listViews>
    <nameField>
        <label>Visits Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>