force-app/main/default/objects/Visits__c/fields/VisitLogo__c.field-meta.xml
<CustomField>
    <fullName>VisitLogo__c</fullName>
    <label>VisitLogo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>