force-app/main/default/objects/Visits__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Planned_Start__c</columns>
    <columns>Checked_In__c</columns>
    <columns>Planned_End__c</columns>
    <columns>Actual_Start__c</columns>
    <columns>Actual_End__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>