force-app/main/default/objects/Visits__c/listViews/My_All_Visits.listView-meta.xml
<ListView>
    <fullName>My_All_Visits</fullName>
    <columns>NAME</columns>
    <columns>Planned_Start__c</columns>
    <columns>Planned_End__c</columns>
    <columns>Actual_Start__c</columns>
    <columns>Actual_End__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My All Visits</label>
</ListView>