force-app/main/default/objects/Visits__c/listViews/Visits_This_Week.listView-meta.xml
<ListView>
    <fullName>Visits_This_Week</fullName>
    <columns>NAME</columns>
    <columns>Planned_Start__c</columns>
    <columns>Status__c</columns>
    <columns>Lead__c</columns>
    <columns>Account__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Planned_Start__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Visits This Week</label>
</ListView>